--- a/ClassNote/src/app/pages/login/login.page.scss
+++ b/ClassNote/src/app/pages/login/login.page.scss
@@ -4,3 +4,11 @@
   align-items: center;
   height: 100%;
 }
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
