estilização da página de seleção de turmas e início para envio de dados paraobanco de dados.

--- a/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
@@ -1,13 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>turma_aulas</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">turma_aulas</ion-title>
+      <ion-title size="large">Aulas da turma [turma]</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-row>
+    <ion-col>
+
+    </ion-col>
+  </ion-row>
+
 </ion-content>
