--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -9,7 +9,7 @@
   <div class="main-content">
 
     <ion-row class="ion-justify-content-center">
-      <ion-col size="8">
+      <ion-col class="ion-margin" size="8">
         <ion-datetime-button datetime="datetime"></ion-datetime-button>
 
         <ion-modal [keepContentsMounted]="true">
@@ -20,17 +20,15 @@
       </ion-col>
     </ion-row>
 
-
-
     <ion-row>
       <ion-col>
         <ion-col size="10">
           <ion-grid>
             <ion-row wrap>
               <ion-col size="12" size-md="6" size-lg="4" *ngFor="let item of items">
-                <ion-card>
+                <ion-card (click)="acessarTurma(item.turma)">
                   <ion-card-header>
-                    {{ item.turma }}
+                    <ion-card-title>{{ item.turma }}</ion-card-title>
                   </ion-card-header>
                   <ion-card-content>
                     {{ item.ensino }}
@@ -45,11 +43,6 @@
             </ion-row>
           </ion-grid>
         </ion-col>
-
-
-
-
-
       </ion-col>
     </ion-row>
   </div>
