--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -8,15 +8,18 @@
 
   <div class="main-content">
 
-    <ion-row class="ion-justify-content-center">
+    <ion-row class="ion-justify-content-center ion-text-center">
       <ion-col class="ion-margin" size="8">
-        <ion-datetime-button datetime="datetime"></ion-datetime-button>
+        <!-- <ion-datetime-button datetime="datetime"></ion-datetime-button>
 
         <ion-modal [keepContentsMounted]="true">
           <ng-template>
             <ion-datetime id="datetime"></ion-datetime>
           </ng-template>
-        </ion-modal>
+        </ion-modal> -->
+
+        <h2>Selecione uma turma</h2>
+
       </ion-col>
     </ion-row>
 
