--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -10,13 +10,6 @@
 
     <ion-row class="ion-justify-content-center ion-text-center">
       <ion-col class="ion-margin" size="8">
-        <!-- <ion-datetime-button datetime="datetime"></ion-datetime-button>
-
-        <ion-modal [keepContentsMounted]="true">
-          <ng-template>
-            <ion-datetime id="datetime"></ion-datetime>
-          </ng-template>
-        </ion-modal> -->
 
         <h2>Selecione uma turma</h2>
 
@@ -28,7 +21,7 @@
         <ion-col size="10">
           <ion-grid>
             <ion-row wrap>
-              <ion-col size="12" size-md="6" size-lg="4" *ngFor="let item of items">
+              <ion-col class="turma" size="12" size-md="6" size-lg="4" *ngFor="let item of items">
                 <ion-card (click)="acessarTurma(item.turma)">
                   <ion-card-header>
                     <ion-card-title>{{ item.turma }}</ion-card-title>
