--- a/ClassNote/src/app/pages/turma/turma.page.scss
+++ b/ClassNote/src/app/pages/turma/turma.page.scss
@@ -5,6 +5,10 @@
     align-items: center;
     justify-content: center;
   }
+
+  .turma{
+    cursor: pointer;
+  }
   
   ion-modal {
     --height: auto;
