--- a/ClassNote/src/app/pages/turma/turma.page.scss
+++ b/ClassNote/src/app/pages/turma/turma.page.scss
@@ -14,10 +14,15 @@ ion-modal {
   --height: auto;
 }
 
+.select{
+  border-radius: 8px;
+  padding-left: 30px;
+  background: #aaaaaa3a;
+}
+
 ion-card:hover {
-  transition: 0.3s;
+  transition: 0.5s;
   box-shadow: 3px 3px 0 3px rgba(0, 110, 255, 0.5);
   transform: scale(0.95);
   animation: alternate 2s;
-
 }
