progesso brabo vambora!!

--- a/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
@@ -9,7 +9,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-button (click)="back()">
+        <ion-button (click)="goBack()">
           <ion-icon style="position: relative;" slot="icon-only" name="arrow-back"></ion-icon>
         </ion-button>
       </ion-buttons>
