--- a/ClassNote/src/app/pages/login/login.page.html
+++ b/ClassNote/src/app/pages/login/login.page.html
@@ -33,7 +33,8 @@
     <ion-grid class="ion-justify-content-center ion-padding">
       <ion-row class="ion-justify-content-center">
         <ion-col size-sm="8" size="12" class="ion-text-center">
-          <img style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo" width="70%" style="max-width: 225px;">
+          <img style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo" width="70%"
+            style="max-width: 225px;">
         </ion-col>
       </ion-row>
       <ion-row class="ion-justify-content-center">
@@ -53,20 +54,19 @@
               fill="outline" class="ion-margin-top">Entrar</ion-button>
           </form>
           <ion-row>
-            <ion-col>
-              <span>Esqueceu sua senha? </span><a style="cursor: pointer;">Clique aqui!</a>
+            <ion-col class="ion-margin-top">
+              <span>Esqueceu sua senha? </span><span routerLink="/forgot-password" style="cursor: pointer; color: #1970C0;">Clique aqui!</span>
             </ion-col>
           </ion-row>
         </ion-col>
         <ion-row class="footer">
-          <ion-col size="8" class="ion-text-center ion-padding">
-            <p style="opacity: 0.5; font-size: 12px; margin-top: 40px;">Desenvolvido pelo Departamento de Tecnologia e
-              Marketing do Colégio Anglo Tatuí.</p>
+          <ion-col size="8" class="ion-text-center">
+            <p style="opacity: 0.5; font-size: 12px;">Desenvolvido pelo Departamento de Tecnologia e Marketing do Colégio Anglo Tatuí.</p>
           </ion-col>
         </ion-row>
       </ion-row>
 
-      
+
 
 
 
