--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -1,22 +1,56 @@
-<ion-content [fullscreen]="true">
-  <ion-header class="ion-text-center">
+<ion-menu side="start" contentId="main-content" content="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">
-        <h1>Selecione uma turma</h1>
-      </ion-title>
+      <ion-title>Class Notes</ion-title>
     </ion-toolbar>
+
+    <ion-toolbar>
+      <ion-row>
+        <ion-col size="3">
+          <img src=".././../../../assets/img/logo-anglo-tatui.png" alt="logo-anglo-tatui">
+        </ion-col>
+        <ion-col style="margin: auto;" size="9">Bem vindo, {{username}}</ion-col>
+      </ion-row>
+    </ion-toolbar>
+
   </ion-header>
 
+  <ion-content style="height: 100%;" class="ion-no-padding ion-no-margin">
+    <ion-list lines="none">
+      <ion-list-header mode="ios">
+        <ion-label>Conta</ion-label>
+      </ion-list-header>
+      <ion-item (click)="logout()" style="bottom: 0;">
+        <ion-label>Sair</ion-label>
+        <ion-icon name="log-out"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <!-- Botão do menu de hambúrguer -->
+      <ion-menu-toggle auto-hide="false">
+        <ion-button>
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
+    </ion-buttons>
+    <ion-title>
+      Turmas
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content id="main-content" [fullscreen]="true" mode="md">
   <div class="main-content">
-
     <ion-row class="ion-justify-content-center ion-text-center">
       <ion-col class="ion-margin" size="11">
-
         <ng-container>
-
           <ion-row>
-            <ion-col size="3">
+            <ion-col size="9">
               <ion-select class="select" interface="popover" placeholder="Ensino" [(ngModel)]="ensinoSelected">
                 <ion-select-option value="">Todos</ion-select-option>
                 <ion-select-option value="Ensino Fundamental I">Ensino Fundamental I</ion-select-option>
@@ -24,18 +58,15 @@
                 <ion-select-option value="Ensino Médio">Ensino Médio</ion-select-option>
               </ion-select>
             </ion-col>
-            <ion-col>
+            <ion-col size="3">
               <ion-button (click)="filtrarTurmas()">
                 <ion-icon name="filter"></ion-icon>
               </ion-button>
             </ion-col>
           </ion-row>
-
         </ng-container>
-
       </ion-col>
     </ion-row>
-
     <ion-row>
       <ion-col>
         <ion-col size="10">
@@ -64,5 +95,4 @@
       </ion-col>
     </ion-row>
   </div>
-
 </ion-content>
