--- a/ClassNote/src/app/pages/turma/turma.page.scss
+++ b/ClassNote/src/app/pages/turma/turma.page.scss
@@ -16,7 +16,7 @@ ion-modal {
 
 .select{
   border-radius: 8px;
-  padding-left: 30px;
+  padding-left: 20px;
   background: #aaaaaa3a;
 }
 
@@ -25,4 +25,15 @@ ion-card:hover {
   box-shadow: 3px 3px 0 3px rgba(0, 110, 255, 0.5);
   transform: scale(0.95);
   animation: alternate 2s;
+}
+
+ion-item {
+  border-radius: 8px;
+  transition: background-color 0.3s, color 0.3s; 
+}
+
+ion-item:hover {
+  background-color: rgba(0, 0, 0, 0.418) !important;
+  color: #1970C0;
+  cursor: pointer;
 }
