--- a/ClassNote/src/app/pages/admin/gerenciar-turmas/gerenciar-turmas.page.html
+++ b/ClassNote/src/app/pages/admin/gerenciar-turmas/gerenciar-turmas.page.html
@@ -1,13 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>gerenciar-turmas</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon style="position: relative;" slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center">Gerenciar Turmas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">gerenciar-turmas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
 </ion-content>
