--- a/ClassNote/src/app/pages/admin/gerenciar-usuarios/gerenciar-usuarios.page.html
+++ b/ClassNote/src/app/pages/admin/gerenciar-usuarios/gerenciar-usuarios.page.html
@@ -1,13 +1,48 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>gerenciar-usuarios</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon style="color: #fff;" slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center">Gerenciar Usuários</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">gerenciar-usuarios</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="5">
+        <ion-row class="header-row">
+          <ion-col size="4">
+            <ion-label class="header-label">Header 1</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label class="header-label">Header 2</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label class="header-label">Header 3</ion-label>
+          </ion-col>
+        </ion-row>
+
+        <ion-row *ngFor="let usuario of usuarios" class="data-row">
+          <ion-col class="ion-align-items-center text" size="4">
+            <ion-label class="data-label">{{ usuario.username }}</ion-label>
+          </ion-col>
+          <ion-col class="ion-align-items-center text" size="4">
+            <ion-label class="data-label">{{ usuario.role }}</ion-label>
+          </ion-col>
+          <ion-col class="ion-text-center" size="4">
+            <ion-icon (click)="editarUsuario(usuario)" name="create-outline"></ion-icon>
+            <ion-icon style="margin-left: 2.5em;" name="trash-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+
+      <ion-col size="7">
+
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
