--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -1,10 +1,10 @@
 <ion-menu side="start" contentId="main-content">
   <ion-header>
-    <ion-toolbar style="border-bottom: 1px solid #fff;">
+    <ion-toolbar color="primary" style="border-bottom: 1px solid #fff;">
       <ion-title>Class Notes</ion-title>
     </ion-toolbar>
 
-    <ion-toolbar>
+    <ion-toolbar color="primary">
       <ion-row>
         <ion-col size="3">
           <img src=".././../../../assets/img/logo-anglo-tatui.png" alt="logo-anglo-tatui">
@@ -36,11 +36,11 @@
         <ion-label>Usuários</ion-label>
         <ion-icon name="people-circle"></ion-icon>
       </ion-item>
-      
+
       <ion-list-header mode="ios">
         <ion-label>Conta</ion-label>
       </ion-list-header>
-      <ion-item (click)="logout()" style="bottom: 0;">
+      <ion-item (click)="logout()" class="logout">
         <ion-label>Sair</ion-label>
         <ion-icon name="log-out"></ion-icon>
       </ion-item>
