--- a/ClassNote/src/theme/variables.scss
+++ b/ClassNote/src/theme/variables.scss
@@ -56,7 +56,7 @@
   --ion-color-dark-rgb: 34, 36, 40;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
+  --ion-color-dark-shade: #231e1e;
   --ion-color-dark-tint: #383a3e;
 
   /** medium **/
@@ -83,7 +83,7 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: #269bdf;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -129,7 +129,7 @@
     --ion-color-dark-rgb: 244,245,248;
     --ion-color-dark-contrast: #000000;
     --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
+    --ion-color-dark-shade: #d8dad7;
     --ion-color-dark-tint: #f5f6f9;
 
     --ion-color-medium: #989aa2;
@@ -143,7 +143,7 @@
     --ion-color-light-rgb: 34,36,40;
     --ion-color-light-contrast: #ffffff;
     --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
+    --ion-color-light-shade: #231e1f;
     --ion-color-light-tint: #383a3e;
   }
 
